apps/outline/templates/outline-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
  labels:
    app.kubernetes.io/name: outline
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: outline
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: outline
        app.kubernetes.io/component: app
    spec:
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: outline
          image: docker.getoutline.com/outlinewiki/outline:1.6.1
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
            runAsNonRoot: true
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: data
              mountPath: /var/lib/outline/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: outline-data
