apps/outline/templates/outline-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outline
  labels:
    app.kubernetes.io/name: outline
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: outline
    app.kubernetes.io/component: app
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
