apps/outline/templates/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app.kubernetes.io/name: outline
    app.kubernetes.io/component: postgres
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: outline
    app.kubernetes.io/component: postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: postgres
